<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--TAdd the map fragment for the user to select the location-->

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/select_location_fragment_map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/colorPrimary"
            />

        <Button
            android:id="@+id/select_location_fragment_save_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/save"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            />

    </FrameLayout>
</layout>
